--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img role = "img" src = "https://images.unsplash.com/photo-1558788353-f76d92427f16" alt = "cute puppy" width="300" height="300"/>
     <script type="text/javascript" src="./script.js">
 </script>
 
